# mod_vigra

./: CMakeLists.txt  README.md
include/: vigra.hpp
src/: vigra.cpp
tests/: vigra_test0.cpp
